@@ -1,0 +1,38 @@
+# Veusz saved document (version 1.25.1)
+# Saved at 2016-12-20T12:31:21.275724
+
+AddCustom('constant', u'Crate', u'42.')
+SetDataRange(u'CumLoss', 100, (1.0, 10.0), linked=True)
+Add('page', name='page1', autoadd=False)
+To('page1')
+Add('graph', name='graph1', autoadd=False)
+To('graph1')
+Add('axis', name='x', autoadd=False)
+Add('axis', name='y', autoadd=False)
+To('y')
+Set('direction', 'vertical')
+To('..')
+Add('label', name='label1', autoadd=False)
+To('label1')
+Set('label', u"Loss: %{{ round(100*max(DATA('CumLoss'))/Crate, 0) }}%% vs %{{Crate}}% mAh/g")
+Set('xPos', [0.101])
+Set('yPos', [0.44])
+To('..')
+Add('label', name='label2', autoadd=False)
+To('label2')
+Set('label', u"Escaped text: %{{ ESCAPE(r'\\\\2 % ^ _ [] {}') }}%")
+Set('xPos', [0.241])
+Set('yPos', [0.578])
+To('..')
+Add('label', name='label3', autoadd=False)
+To('label3')
+Set('label', u'<<%{{ BASENAME() }}%>> is basename')
+Set('xPos', [0.526])
+Set('yPos', [0.637])
+To('..')
+Add('label', name='label4', autoadd=False)
+To('label4')
+Set('label', u"Page width: %{{ SETTING('/page1/width') }}%")
+To('..')
+To('..')
+To('..')
